ヘッダーにメニューを追加

--- a/app/assets/stylesheets/home/_colors.scss
+++ b/app/assets/stylesheets/home/_colors.scss
@@ -1,2 +1,14 @@
-/* シアン系 */
-$dark_cyan: #448888
+/* 白系 */
+$white: #ffffff;
+
+/* 紫系 */
+$blue_violet: #8a2be2;
+
+/* ピンク系 */
+$deep_pink: #FF1493;
+
+/* 紺色 */
+$navy: #223a70;
+
+/* オレンジ系 */
+$orange: #fd7e00
