--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,3 +1,16 @@
 <header>
-    <span class="logo-mark">OpenForum</span>
+    <ul>
+        <% # [ToDo]link_toメソッドに置き換える %>
+        <li>
+            <a class="logo-mark" href="#">OpenForum</a>
+        </li>
+
+        <li>
+            <a class="menu" href="#">スレッド</a>
+        </li>
+
+        <li>
+            <a class="menu" href="#">機能A</a>
+        </li>
+    </ul>
 </header>
